<resources>
    <string name="app_name">PracticeApps</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_let_the_trade_begins">Welcome, Let the trade begins</string>
    <string name="remember_me">Remember me</string>
    <string name="autofillHints">/@gmail.com</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign up</string>
</resources>